--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import-normalize; */
+
 body {
   margin: 0;
   font-family: 'Prompt', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -7,6 +9,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  font-family: 'Prompt', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
+
+button:focus {
+  outline: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
